# RTEP-Project

./: README.md
alarm/: Alarm.pro  widget.cpp
lzscode/: alarm_system.cpp  alarm_system.hpp
lzscode/museum_alarm/: alarm_log.txt  alarm_system.cpp  main.cpp  museum_alarm
mhycode/my-alarm-app/: package.json  pnpm-lock.yaml
mhycode/my-alarm-app/app/components/ui/: button.tsx  label.tsx
src/: .gitignore  CMakeLists.txt  main.cpp
src/include/: AlarmHandler.hpp  DigitalProximitySensor.hpp  EventManager.hpp  PseudoDigitalProximitySensor.hpp  PseudoI2CProximitySensor.hpp  SensorInterface.hpp
src/src/: AlarmController.cpp  AlarmController.h  ApiServer.cpp  ApiServer.h  GpioHandler.cpp  GpioHandler.h  I2cHandler.cpp  I2cHandler.h  main.cpp
src/src/gui/: alarmgui.cpp  alarmgui.h  main_gui.cpp
web/: frontend.html
web/my-alarm-app/app/routes/: App.tsx
